Definetily fix this overflow bug

--- a/static/main.css
+++ b/static/main.css
@@ -298,5 +298,5 @@ html, body, .view {
 video { display: block; }
 
 .space {
-  padding: 80px;
+  padding: 6%;
 }
